re PR tree-optimization/23434 (ICE: Segmentation fault compiling gsl1.5 at -O2)

PR tree-optimization/23434
        * tree-ssa-loop-niter.c (proved_non_wrapping_p): Give up when
        the iteration bound is not an INTEGER_CST.

From-SVN: r103315